fix css diorama on mobile

--- a/themes/bnpb/assets/css/custom.css
+++ b/themes/bnpb/assets/css/custom.css
@@ -745,10 +745,6 @@ body .diorama-section .modal-text .sosmed-share ul li .fa-twitter {
         max-height: 220px;
     }
 
-    .list-diorama {
-        max-height: 120px;
-    }
-
     .list-post-diorama {
         max-height: 40px;
     }
